--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ body {
   #content h1{
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
+    margin-top: 50px ;
   }
   #content p{
     font-family: 'Nunito Sans', sans-serif;
